--- a/_posts/2012-05-21-zooms.markdown
+++ b/_posts/2012-05-21-zooms.markdown
@@ -7,4 +7,4 @@ sidebar: collapse
 external-url: https://vimeo.com/38828455
 categories: [Video, Film]
 ---
-<iframe src="http://player.vimeo.com/video/38828455" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<div class="flex-video"><iframe src="http://player.vimeo.com/video/38828455" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
