--- a/_posts/2012-05-21-operator.markdown
+++ b/_posts/2012-05-21-operator.markdown
@@ -6,5 +6,6 @@ comments: false
 sidebar: collapse
 external-url: http://www.youtube.com/watch?v=6dJbx4pbI4k
 categories: [Video]
+published: false
 ---
 <div class="flex-video"><iframe width="420" height="315" src="http://www.youtube.com/embed/6dJbx4pbI4k" frameborder="0" allowfullscreen></iframe></div>
