--- a/_posts/2012-05-21-zooms.markdown
+++ b/_posts/2012-05-21-zooms.markdown
@@ -6,5 +6,6 @@ comments: false
 sidebar: collapse
 external-url: https://vimeo.com/38828455
 categories: [Video, Film]
+published: false
 ---
 <div class="flex-video"><iframe src="http://player.vimeo.com/video/38828455" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
