Added more whitespace?

--- a/_posts/2013-04-25-dht-talk.md
+++ b/_posts/2013-04-25-dht-talk.md
@@ -4,9 +4,11 @@ title: "DHT Talk"
 date: 2013-04-25 24:32
 comments: false
 external-url: https://vimeo.com/56044595
-tags: [LaTeX, TextMate, Programming, Markup]
+tags: [DHT, Programming, Bittorrent]
 published: true
 ---
 
 This talk takes the magic out of DHT.
+
 <div class="flex-video"><iframe src="http://player.vimeo.com/video/56044595" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+
