--- a/_posts/2013-04-25-dht-talk.markdown
+++ b/_posts/2013-04-25-dht-talk.markdown
@@ -10,3 +10,6 @@ published: true
 ---
 
 Taking the magic out of Distributed Hash Tables (DHT).
+<div class="flex-video">
+    <iframe src="http://player.vimeo.com/video/56044595?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+</div>
