--- a/_posts/2013-04-25-dht-talk.markdown
+++ b/_posts/2013-04-25-dht-talk.markdown
@@ -14,3 +14,10 @@ Taking the magic out of Distributed Hash Tables (DHT).
     <iframe src="http://player.vimeo.com/video/56044595?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 
+{{ page.date }}
+
+{{ page.date | date_to_xmlschema }}
+
+{{ site.time }}
+
+{{ site.time | date_to_xmlschema }}
