Adding some offending code
to see if it builds on a blog post page.

--- a/_posts/2013-04-25-dht-talk.markdown
+++ b/_posts/2013-04-25-dht-talk.markdown
@@ -21,3 +21,5 @@ Taking the magic out of Distributed Hash Tables (DHT).
 {{ site.time }}
 
 {{ site.time | date_to_xmlschema }}
+
+{{ "Sun Feb 10 01:51:00 -0800 2013" | date_to_xmlschema }}
