Does this fix it?

--- a/404.md
+++ b/404.md
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: 404 Not Found
+title: 404
 asides: false
 date: 2013-06-18 14:03:00
+permalink: /404.html
 ---
 
 404 :(
