Initial notes format now working.

--- a/_posts/2013-06-23-t1.md
+++ b/_posts/2013-06-23-t1.md
@@ -3,8 +3,9 @@ layout: note
 title: "t1"
 date: 2013-06-23 09:59
 in-reply-to-url: http://eschnou.com/entry/testing-indieweb-federation-with-waterpigscouk-aaronpareckicom-and--62-24908.html
+in-reply-to-title: "eschnou.com"
 tags: [Website, Web]
 published: true
 ---
 
-Here is another comment, but using the new note/text format.
+Here is another comment, but using a more generic format.
