--- a/_posts/2013-06-23-t2.md
+++ b/_posts/2013-06-23-t2.md
@@ -4,7 +4,7 @@ title: "t2"
 date: 2013-06-23 16:16
 in-reply-to-url: http://eschnou.com/entry/testing-indieweb-federation-with-waterpigscouk-aaronpareckicom-and--62-24908.html
 in-reply-to-title: "eschnou.com"
-tags: [Website, Web]
+tags: [Indieweb]
 published: true
 ---
 
