--- a/_posts/2013-06-25-t2.md
+++ b/_posts/2013-06-25-t2.md
@@ -8,3 +8,4 @@ tags: [Indieweb, Event, RSVP]
 rsvp: "yes"
 published: true
 ---
+I can even add a message to the RSVP.  In fact, this text was not in the original note but appended using a second webmention to update the RSVP.
