--- a/_posts/2013-06-26-indiewebcamp-2013.md
+++ b/_posts/2013-06-26-indiewebcamp-2013.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "IndieWebCamp 2013"
+title: "IndieWebCamp 2013 Roundup"
 date: 2013-06-26 23:48
 in-reply-to-url: 
 in-reply-to-title: 
@@ -10,12 +10,35 @@ published: true
 <img class="pull-right img-polaroid" src="http://indiewebcamp.com/wiki/skins/indieweb/styles/gumax_cyborg/indiewebcamp_logo_color_155.png"></img>
 
 
-This past weekend I attended [IndieWebCamp 2013](http://indiewebcamp.com/Main_Page), a small, two day [barcamp](http://barcampportland.org/about/) style conference in [Portland, OR](http://goo.gl/maps/okB7X).  I have never been to anything like this before, but needless to say, given all of the [amazing ideas and fantastic projects people](http://tantek.com/2013/175/t2/indiewebcamp-hacks-sms-login-webfist-favoriting) left with, I had a fantastic time and left inspired.
+This past weekend I attended [IndieWebCamp 2013](http://indiewebcamp.com/Main_Page), a small, two day [barcamp](http://barcampportland.org/about/) style conference in [Portland, OR](http://goo.gl/maps/okB7X).  I have never been to anything like this before, but needless to say, given all of the [amazing ideas and fantastic projects people](http://tantek.com/2013/175/t2/indiewebcamp-hacks-sms-login-webfist-favoriting) came and left with, I had a fantastic time and left inspired.
 
 # Projects that blew my mind
 Every project at IWC2013 was interesting and important in its own way. They are the product of everyone scratching their own itch, [doing things their own way](https://www.youtube.com/watch?v=1OFyh8ihzEs), finding [common](http://microformats.org/) [ground](http://www.whatwg.org/specs/web-apps/current-work/multipage/) with others and ultimately avoiding [monoculture](http://indiewebcamp.com/monoculture).  That being said, the following projects really blew my mind.
 
-## [Webfist](http://webfist.org/)
+## IndieAuth: Passwordless Authentication and Persona
+<img class="pull-right" width="261" height="498" src="https://farm4.staticflickr.com/3717/9157793342_8c0b1c266e_o.png"></img>
+
+[IndiAuth](https://indieauth.com/) added two additional authentication methods over the weekend, SMS and Persona.  [Austin King](http://ozten.com/psto/) and [Francois Marier](http://fmarier.org/), both Mozilla Developers, as well as as [Aaron Parecki](http://aaronparecki.com/) worked their magic and made this happen.
+
+#### IndiAuth now supports Persona when provided an email address.
+
+[Mozilla Persona](https://www.mozilla.org/en-US/persona/) [has many benefits](http://identity.mozilla.com/post/46374271364/persona-is-distributed-today) over the siloed implementations of openID.  You can now add a `rel="me"` to an email address on your web page and authenticate using Persona in IndieAuth.  Apparently this could also work the other way, where IndieAuth works as an authentication provide for Persona.  There was also discussion about ways to use Persona with IndieAuth without having to have an email address posted publicly.  [These last two items have not been implemented yet](http://indiewebcamp.com/2013/demos#Aaron_Parecki_and_Francois_Marier).
+
+#### SMS Authentication killed the password
+
+[Aaron](http://aaronparecki.com/) also managed implemented SMS authentication in IndieAuth.  If you add 
+
+{% highlight html %}
+<a rel="me" href="sms:+15035555555">(503) 555-5555</a> 
+{% endhighlight %}
+
+to your identifying website, IndieAuth allows you to authenticate with your domain and the associated phone number alone.  No passwords.
+
+*This is a big idea.*
+
+[Lots](http://gizmodo.com/5977040/googles-making-moves-to-kill-the-password) [of](http://www.fool.com/investing/general/2013/05/14/paypal-and-apple-want-to-kill-your-password.aspx) influential tech companies talk about killing passwords.  IndieWebCamp has a working model for this today.  If only we could associate phone numbers with email addresses, maybe we could speed up adoption...
+
+## Webfist
 <img class="pull-right" width="261" height="498" src="http://upload.wikimedia.org/wikipedia/commons/1/17/Fist.png"></img>
 
 What happens when you have two incredibly skilled Google engineers sit down for a day and hack on the solution to corporations who are too stubborn to adopt open web technologies?  
@@ -26,72 +49,122 @@ Developed by [Brett Slatkin](http://www.onebigfluke.com/) and [Brad Fitzpatrick]
 
 #### Here are the details I remember from the weekend.
 
-Webfinger lets you attach arbitrary information such as a profile photo URL, a public encryption key, website URL, or preferred authentication provider to you email address, allowing for anyone to discover this information from just your email address and some simple http requests.
+Webfinger lets you attach arbitrary information to an email address.  This is done by relying on the email host to implement Webfinger.  Examples of information you might want associated with your email address.
 
-The problem with Webfinger is that the email provider has to implement it in order for it to work, and so far nobody has done this.
+- A (link to a) profile photo
+- Public encryption key
+- Website URL
+- Phone number
+- Bitcoin Address
+- Preferred authentication authority
 
-Webfist is the software used to run a distributed fallback network that allows webfinger attributes to be associated with *any* email address, even if the email provider has not yet implemented Webfinger support.  [The way it actually works is kind of complicated](http://www.onebigfluke.com/2013/06/bootstrapping-webfinger-with-webfist.html), but it uses some kind of fancy cryptographic header information to allow an email address' to associate Webfinger data with itself securely.  
+The only problem is that the major email providers have not yet implemented Webfinger, even though the engineers behind the scene are clamoring for it.
+
+Webfist is the software used to run a distributed fallback network that allows webfinger attributes to be associated with *any* email address, even if the email provider has not yet implemented Webfinger support.  [The way it actually works is kind of complicated](http://www.onebigfluke.com/2013/06/bootstrapping-webfinger-with-webfist.html), but it uses [some kind of fancy cryptographic header information](http://www.dkim.org/) that the major players *have* implemented to help fight spam as a way to to allow an email address to associate Webfinger data with itself securely.  
 
 #### How can I start using it today?
 
 After speaking with Brad, it sounds like it wont be necessary for many individuals to run a Webfist server, although its completely possible for anyone to run a node in the distributed network.  It sounds like the developers have a number of connections that can provide the necessary infrastructure to get the network off the ground.
 
-I still have not found a clear example showing exactly how to get data into the Webfist network, but will repost it here when I find it.
+I still have not found dead simple example showing exactly how to get data into the Webfist network.
 
 #### What about the whole own your domain thing?
 
-There was [some objection to Webfinger](http://indiewebcamp.com/WebFinger) during the discussion session on Webfist.  It's not hard to see Webfinger as a perpendicular direction to many efforts of [IndieWebCamp](http://indiewebcamp.com/why) which strongly advocates the use of a domain to identify yourself on the web.  On the flip side of this concern, it could enable transitional mechanisms via Webfingers powerful discoverability abilities that could allow people without a domain yet to participate on the IndieWeb in a larger way than without it.
+There was [some controversy surrounding Webfinger](http://indiewebcamp.com/WebFinger) during the discussion session on Webfist.  On the one hand, this powerful discoverability tool could potentially pull wind away from people seeing the need to represent themselves on a domain name (IE, why would I need a domain name if I can assert my identity using my email address).  The other perspective is that it could act as a transitional bridge away from silos serving as identity authorities for those without a domain name.
 
-The applications of Webfinger goes beyond identity on the web however, as it basically provides a solution to the public key discovery problem which could actually allow PGP to be used more easily.  And now we have Webfist to help get this ball rolling.
+Oh, and I can't confirm or deny if webfist.me was purchased over the weekend.
 
-Oh, and I can't confirm or deny if [webfist.me](webfist.me) was purchased over the weekend.
+## IndieWeb Implementations
+<img class="pull-right" width="261" height="498" src="http://farm3.staticflickr.com/2807/9157907602_c9d5926a8a_o.png"></img>
+
+Shortly before IWC2013, an interesting thing happened at [eschnou.com](http://eschnou.com/entry/testing-indieweb-federation-with-waterpigscouk-aaronpareckicom-and--62-24908.html).  Using standard HTML, [Microformats](http://microformats.org/wiki/h-entry), and [Pingbacks](http://indiewebcamp.com/pingback)/[Webmentions](http://indiewebcamp.com/webmentions), a distributed commenting system emerged.  
+
+- No central servers
+- No company controlled APIs
+- No single software stack
+
+Anyone with some common HTML classes and dom structures with the ability to send dead simple HTTP requests [can participate](http://indiewebcamp.com/reply).  Post the reply on your own website noting your reply context, then notify the site about your activity using a webmention or pingback.  Here are some examples:
+
+- [eschnou.com](http://eschnou.com/entry/testing-indieweb-federation-with-waterpigscouk-aaronpareckicom-and--62-24908.html)
+- [aaronparecki.com](http://aaronparecki.com/notes/2013/06/23/3/indieauth-indiewebcamp#comments)
+- [waterpigs.co.uk](http://waterpigs.co.uk/notes/4QeMP9/)
+- [sandeep.io](http://www.sandeep.io/73) (featuring Indie "Likes"!)
+- [werd.io](http://werd.io/view/51c8fc19bed7de5e23600fb1)
+- [willnorris.com](https://willnorris.com/2013/06/testing-indieweb-comments)
+
+Some implementations display like a traditional comment system, other follow the twitter UX for handling replies.  Some people are even experimenting with threads.  The key to success here is that everyone is [selfdogfooding](http://indiewebcamp.com/selfdogfood).
+
+### Idno posting [Chickens](http://werd.io/view/51cba40ebed7de0162d02f9e), [Events](http://indiewebcamp.com/event), [RSVPs](http://indiewebcamp.com/rsvp) and [CRUD](http://indiewebcamp.com/reply#Update_a_comment)
+<img class="pull-right" width="261" height="498" src="http://farm8.staticflickr.com/7385/9155902415_53114141a4_o.png"></img>
+
+After Sunday, it became apparent that everyone still had momentum from the weekend.  [Ben Werdmuller](http://werd.io/) and I decided that [rounding up anyone still in Portland was a good idea](http://bret.io/2013/06/24/t6/).
+
+A few hours (or just an hour?), Ben managed to implement an [event post and a working RSVP model](http://werd.io/event/51c94deebed7de5c2386a1b4/unofficial-portland-post-indiewebcamp-meetup)!  After realizing the original announcement details needed to be updated after posting, [tantek](http://tantek.com/2013/178/t2/federated-indieweb-comments-likes-event-rsvp-demo-crud) helped draft comment updates+deletes (CRUD), which Ben implemented a day later.
+
+Hats off to Ben and the [Idno](http://idno.co/) project for is impressive speed at implementing these important concepts.  [Aaron already has is RSVP](http://aaronparecki.com/replies/2013/06/27/1/indieweb) implementation working!
+
+This stuff is developing fast!  Just this evening [Aaron implemented IndieWeb IRC repliess](http://aaronparecki.com/replies/2013/06/28/1/indieweb)
+
+# Things that looked rad but I did not fully understand
+The following projects look super interesting but I am still confused about exactly what they are or how they work.
+
+## [Camlistore](https://camlistore.org/)
+<img class="pull-right img-polaroid" width="261" height="498" src="http://farm4.staticflickr.com/3674/9158159070_bb685d1fa3_o.png"></img>
+
+[Brad](http://bradfitz.com/) gave a talk on [Camlistore](https://camlistore.org/).  It appears to be way to store data in some kind of blob tree which offers a lot of flexibility on how it can be accessed and stored.  It also sounds like it could enable distributed file sharing in really interesting ways.  Apparently you will eventually be able to rent out space to others for Bitcoins.
+
+I myself am sitting on a pile of data at home, unsatisfied 
+with how its stored and accessed. This sounds like it has a huge potential for providing some satisfaction to my data problem.
 
 
-## Passwordless Authentication and Persona
+## [Smallest-Federated-Wiki](http://fed.wiki.org/welcome-visitors.html)
+<img class="pull-right" width="261" height="498" src="http://farm4.staticflickr.com/3716/9155969247_91e0319a12_o.png"></img>
 
-[IndiAuth](https://indieauth.com/) received two major features over the weekend.  I had been hoping that [Persona](https://www.mozilla.org/en-US/persona/) would be added as an authentication provider since I found out about the project a few months ago.  Luckily [Austin King](http://ozten.com/psto/) and [Francois Marier](http://fmarier.org/), both Mozilla Developers, as well as as [Aaron Parecki](http://aaronparecki.com/) were able to make this happen.
+I missed the discussion on this project, and I wish I hadn't.   The [Smallest-Federated-Wiki](http://fed.wiki.org/welcome-visitors.html) is a wiki that allows anyone to fork pages on their own instance of the wiki, and allows others to pull those changes in...  I think.  The implementation looks really slick and has a lot of interesting client side stuff going on.  Check out some of the [demo videos](http://wardcunningham.github.io/).
 
-#### IndiAuth now supports Persona when provided an email address.
+## IFTTT Everything
+[Paul Fenwick](https://twitter.com/pjf) led an interesting discussion and gave some demos about implementing APIs, data collection and actions where there previously was nothing.
 
-Mozilla Persona [brings a lot of benefits](http://identity.mozilla.com/post/46374271364/persona-is-distributed-today) over some of the standard authentication providers.  One of those benefits is that IndiAuth can be used as an auth provider for Persona, so the relationship can work both ways, although this part has not actually been implemented yet.  
+Having little experience or skills relevant to this topic, I found myself kind of lost, but the automation and interfacing with data sources was impressive.  There are some interesting links from that sessions [etherpad](https://etherpad.mozilla.org/indiewebcamp-exobrain).
 
-#### SMS Authentication kills the password
+<img class="img-polaroid" src="http://farm3.staticflickr.com/2889/9109842488_ac540f585f_b.jpg"></img>
 
-[Aaron](http://aaronparecki.com/) implemented SMS authentication in IndieAuth.  If you add 
+# Other Ideas that resonated with me
 
-{% highlight ruby %}
-<a rel="me" href="sms:+15035555555">(503) 555-5555</a> 
-{% endhighlight %}
+- [Academic Markdown and Citations](http://indiewebcamp.com/2013/Citations_and_Scholarly_Markdown)
+- [Forking the Commons](http://www.harlantwood.net/pub/Harlan_T_Wood/)
+- [TheBrain](http://indiewebcamp.com/2013/Sessions#Personal_Data_Storage_Solutions)
 
+# Ideas for next year
 
-to your
+Here are some topics I would like to see more of next year.
 
-### IndieWeb Implementations
+### IRC Brainstorm
 
-#### Idno and posting Chickens 
+[IRC](http://indiewebcamp.com/IRC) plays an integral role in developing these projects, as it serves as one of the primary channels of real-time communication.  It can be tough for new users and the software is hard to use in many cases.
 
-## Things that looked totally awesome but I did not really fully understand.
+I would like to have some discussions about how people use IRC in relation to the IndieWeb, as well as look for new uses for this communications tool.
 
-### Camlistore
+We could also just demo everyones exotic IRC setups.
 
-### Smallest-Federated-Wiki
+### Static Site Session
 
-### IFTTT Everything
+Static websites are easy, and I would like to discuss how people are participating in the indieweb without just static HTML and client side JS.  I am primarily curious how others over come some of the challenges of doing everything at compile time, as well as sharing what I have found in my experiments.
 
-## Ideas that resonated with me
+# How I can contribute going forward
 
-#### Forking the Commons
+Here are some things that I hope to work on before the next conference.
 
-#### TheBrain
+### Implement posting types that interest me
 
-![Tantek Setting up for demos](https://farm3.staticflickr.com/2889/9109842488_ac540f585f_b.jpg)
+Not all of the posting types interest me.  I need to implement the post types I want, and do a really solid job on the implementation.
 
-## Ideas for next year
+### Start displaying Webmentions/Pingbacks using [Pingback.me](http://pingback.me/)
 
-#### IRC Brainstorm
+Starting small, I want to give some kind of indication that someone has sent me a webmention or pingback on the pingback.me service.  I think I will be able to do this using vanilla JS.
 
-#### Static Site Session
+### Look into unhosted posting methods
 
-## How I can contribute going forward
+Finding out about projects like [Unhosted](https://unhosted.org/) gives me some hope that eventually, I could implement an unfrosted posted system directly to github pages. 
 
-#### Academic Markdown and Citations
+<img class="img-polaroid" src="http://indiewebcamp.com/images/4/4c/indie-web-camp-2013.jpg"></img>
