Reflected the fact that this happened in the past

--- a/_posts/2013-06-29-t1.md
+++ b/_posts/2013-06-29-t1.md
@@ -8,4 +8,4 @@ tags: [Indieweb, Event, RSVP]
 rsvp: "no"
 published: true
 ---
-I'm not going to be able to make it this time :(
+I wasn't able to make it this time :(  I hope you all had a good time though.
