Typo and increase paginate count

--- a/_posts/2013-07-19-t1.md
+++ b/_posts/2013-07-19-t1.md
@@ -5,4 +5,4 @@ date: 2013-07-19 23:27
 tags: [PuSH, Test]
 published: true
 ---
-Testing pubsubhubbub using the new [UrlReq](https://github.com/izuzak/urlreq) [delay parameter](https://github.com/izuzak/izuzak.github.com/issues/11#issuecomment-20837204) with a delay of 5s.  Thank you [izuzak](https://github.com/izuzak)!
+Testing pubsubhubbub using the new [UrlReq](https://github.com/izuzak/urlreq) [delay parameterr](https://github.com/izuzak/izuzak.github.com/issues/11#issuecomment-20837204) with a delay of 5s.  Thank you [izuzak](https://github.com/izuzak)!
