Added some meta data back to the post

--- a/_posts/2013-07-23-t1.md
+++ b/_posts/2013-07-23-t1.md
@@ -7,6 +7,9 @@ published: true
 items:
 - type: 'youtube'
   v: 'pEsoEOiPzV8'
+  name: 'Blake'
+  year: '1969'
+  duration: '19m17s'
 ---
 {% assign i = 0  %}
 {% include item %}
