Added info about the wiki

--- a/_posts/2013-07-25-t1.md
+++ b/_posts/2013-07-25-t1.md
@@ -17,3 +17,5 @@ syndicate: [{url: 'http://news.indiewebcamp.com/post', name: IndieNews}]
 {% include item %}
 
 Feel free to RSVP, although it will only register as an webmention for now.
+
+Not familiar with the IndieWeb?  Check out the [IndieWebCamp wiki](http://indiewebcamp.com/Main_Page) for more info.
