--- a/_posts/notes/2013-07-31-t1.md
+++ b/_posts/notes/2013-07-31-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: true
+published: false
 title: t1
 reply_url: "http://aaronparecki.com/notes/2013/07/30/3/pearl-crash"
 reply_title: aaronparecki.com
