Refactored reply metadata name

--- a/_posts/2013-06-24-t1.md
+++ b/_posts/2013-06-24-t1.md
@@ -2,8 +2,8 @@
 layout: note
 title: "t1"
 date: 2013-06-24 00:01
-in-reply-to-url: http://eschnou.com/entry/testing-indieweb-federation-with-waterpigscouk-aaronpareckicom-and--62-24908.html
-in-reply-to-title: "eschnou.com"
+reply_url: http://eschnou.com/entry/testing-indieweb-federation-with-waterpigscouk-aaronpareckicom-and--62-24908.html
+reply_title: "eschnou.com"
 tags: [Indieweb]
 published: true
 ---
