--- a/_posts/2013-06-24-t4.md
+++ b/_posts/2013-06-24-t4.md
@@ -2,7 +2,7 @@
 layout: note
 title: "t4"
 date: 2013-06-24 20:30
-in-reply-to-url: http://werd.io/view/51c8fc19bed7de5e23600fb1
+reply_url: http://werd.io/view/51c8fc19bed7de5e23600fb1
 in-reply-to-title: "werd.io"
 tags: [Indieweb]
 published: true
