--- a/_posts/2013-06-29-t2.md
+++ b/_posts/2013-06-29-t2.md
@@ -2,7 +2,7 @@
 layout: note
 title: "t2"
 date: 2013-06-29 00:13
-in-reply-to-url: http://aaronparecki.com/replies/2013/06/28/1/indieweb
+reply_url: http://aaronparecki.com/replies/2013/06/28/1/indieweb
 in-reply-to-title: "aaronparecki.com"
 tags: [Indieweb, Reply, IRC]
 published: true
