--- a/_posts/notes/2013-07-26-t1.md
+++ b/_posts/notes/2013-07-26-t1.md
@@ -4,7 +4,7 @@ title: "t2"
 date: 2013-07-26 11:22
 tags: [IndieWeb]
 published: true
-in-reply-to-url: 'http://aaronparecki.com/events/2013/07/28/1/indieweb-hack-session'
+reply_url: 'http://aaronparecki.com/events/2013/07/28/1/indieweb-hack-session'
 in-reply-to-title: 'aaronparecki.com'
 rsvp: "Yes"
 ---
