Fixed reply title name

--- a/_posts/2013-06-24-t2.md
+++ b/_posts/2013-06-24-t2.md
@@ -3,7 +3,7 @@ layout: note
 title: "t2"
 date: 2013-06-24 00:11
 reply_url: http://aaronparecki.com/notes/2013/06/23/3/indieauth-indiewebcamp
-in-reply-to-title: "aaronparecki.com"
+reply_title: "aaronparecki.com"
 tags: [Indieweb]
 published: true
 ---
