--- a/_posts/2013-06-24-t5.md
+++ b/_posts/2013-06-24-t5.md
@@ -3,7 +3,7 @@ layout: note
 title: "t5"
 date: 2013-06-24 21:54
 reply_url: https://willnorris.com/2013/06/testing-indieweb-comments
-in-reply-to-title: "willnorris.com"
+reply_title: "willnorris.com"
 tags: [Indieweb]
 published: true
 ---
