--- a/_posts/2013-06-24-t6.md
+++ b/_posts/2013-06-24-t6.md
@@ -3,7 +3,7 @@ layout: note
 title: "t6"
 date: 2013-06-24 23:41
 reply_url: http://werd.io/view/51c921fcbed7de745b274ae6
-in-reply-to-title: "werd.io"
+reply_title: "werd.io"
 tags: [Indieweb]
 published: true
 ---
