--- a/_posts/notes/2013-07-10-t1.md
+++ b/_posts/notes/2013-07-10-t1.md
@@ -3,7 +3,7 @@ layout: note
 title: "t1"
 date: 2013-07-10 00:48
 reply_url: http://werd.io/entry/51dca7e2bed7de945debf707/the-indieweb-as-a-minimum-viable-social-web-ecosystem
-in-reply-to-title: "werd.io"
+reply_title: "werd.io"
 tags: [Indieweb, Reply]
 published: true
 ---
