--- a/_posts/notes/2013-07-26-t1.md
+++ b/_posts/notes/2013-07-26-t1.md
@@ -5,7 +5,7 @@ date: 2013-07-26 11:22
 tags: [IndieWeb]
 published: true
 reply_url: 'http://aaronparecki.com/events/2013/07/28/1/indieweb-hack-session'
-in-reply-to-title: 'aaronparecki.com'
+reply_title: 'aaronparecki.com'
 rsvp: "Yes"
 ---
 Sounds good to to me!
