--- a/_posts/2013-06-24-t3.md
+++ b/_posts/2013-06-24-t3.md
@@ -3,7 +3,7 @@ layout: note
 title: "t3"
 date: 2013-06-24 00:32
 reply_url: http://waterpigs.co.uk/notes/4QeMP9/
-in-reply-to-title: "waterpigs.co.uk"
+reply_title: "waterpigs.co.uk"
 tags: [Indieweb]
 published: true
 ---
