--- a/_posts/2013-06-25-t2.md
+++ b/_posts/2013-06-25-t2.md
@@ -3,7 +3,7 @@ layout: note
 title: "t2"
 date: 2013-06-25 16:28
 reply_url: http://werd.io/event/51c94deebed7de5c2386a1b4/unofficial-portland-post-indiewebcamp-meetup
-in-reply-to-title: "werd.io"
+reply_title: "werd.io"
 tags: [Indieweb, Event, RSVP]
 rsvp: "yes"
 published: true
