--- a/_posts/2013-06-29-t1.md
+++ b/_posts/2013-06-29-t1.md
@@ -3,7 +3,7 @@ layout: note
 title: "t1"
 date: 2013-06-29 00:06
 reply_url: http://werd.io/event/51ccc9ecbed7deaf58e8ff5e/indieweb-burritos
-in-reply-to-title: "werd.io"
+reply_title: "werd.io"
 tags: [Indieweb, Event, RSVP]
 rsvp: "no"
 published: true
