--- a/_posts/notes/2013-08-06-t1.md
+++ b/_posts/notes/2013-08-06-t1.md
@@ -9,4 +9,4 @@ reply_url: "http://aaronparecki.com/notes/2013/08/02/1/google-voice"
 reply_title: aaronparecki.com
 ---
 
-They actually map those numbers from your google voice number to the number that you are dailing.  You can text those numbers and it will arrive from your google voice number, or you can call them and you will call the recipiant from your GV number, so keep them private.
+They actually map those numbers from your google voice number to the number that you are dialing, and they never change!  You can text those numbers and it will arrive from your google voice number, or you can call them and you will call the recipient from your GV number, so keep them private.
