Added info about a list

--- a/_posts/notes/2013-08-06-t1.md
+++ b/_posts/notes/2013-08-06-t1.md
@@ -9,4 +9,4 @@ reply_url: "http://aaronparecki.com/notes/2013/08/02/1/google-voice"
 reply_title: aaronparecki.com
 ---
 
-They actually map those numbers from your google voice number to the number that you are dialing, and they never change!  Keep them private.
+They actually map those numbers from your google voice number to the number that you are dialing, and they never change!  Keep them private.  However, if you combine Google voice dial back and AT&T's A-list, you can get unlimited voice service to any number at all times of the day.
