--- a/_posts/notes/2013-08-07-t1.md
+++ b/_posts/notes/2013-08-07-t1.md
@@ -8,9 +8,10 @@ tags:
   - IndieWeb
 ---
 
-Highlights from [osfw3c]():
+Highlights from [osfw3c](http://www.w3.org/2013/socialweb/agenda.html):
 
 - [fatberg.org](http://www.fatberg.org)
+  * The future of the  enterprise social.  Cloud.
 - [twtr.io](http://twtr.io)
-  - It became obious that we needed an algorithmic twitter url shortener for the IRC logs, so [aaronparecki.com](http://aaronparecki.com) made one durring the first talk session!
- - [tantek](http://tantek.com/2013/219/t5/publishing-web-docs-specs-pdf-wrong-osfw3c) on [using PDF to document your webstandard]
+  * It became obious that we needed an algorithmic twitter url shortener for the IRC logs, so [aaronparecki.com](http://aaronparecki.com) made one durring the first talk session!
+ - [tantek](http://tantek.com/2013/219/t5/publishing-web-docs-specs-pdf-wrong-osfw3c) on [using PDF to document your webstandard].
