Added thought to the overall meet

--- a/_posts/notes/2013-08-07-t1.md
+++ b/_posts/notes/2013-08-07-t1.md
@@ -13,5 +13,7 @@ Highlights from [osfw3c](http://www.w3.org/2013/socialweb/agenda.html):
 - [fatberg.org](http://www.fatberg.org)
   * The future of the  enterprise social.  Cloud.
 - [twtr.io](http://twtr.io)
-  * It became obvious that we needed an algorithmic twitter url shortener for the IRC logs, so [aaronparecki.com](http://aaronparecki.com) made one during the first talk session!
+  * It became obvious that we needed an algorithmic twitter url shortener for the IRC logs, so [aaronparecki.com](http://aaronparecki.com) made one during the first talk session!  
  - [tantek](http://tantek.com) on [using PDF to document your web standard](http://tantek.com/2013/219/t5/publishing-web-docs-specs-pdf-wrong-osfw3c).  
+ 
+Everything else was so abstract...
