Ready for the web

--- a/_posts/notes/2013-08-08-t1.md
+++ b/_posts/notes/2013-08-08-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 date: "2013-08-08 08:22"
 reply_url: ""
@@ -8,6 +8,6 @@ reply_url: ""
 
 Please divert your attention to a great post by [Shane Becker](http://iamshane.com/):
 - [JSON-LD is an Unneeded Spec](http://iamshane.com/articles/2013/8/8/1/json-ld-is-an-uneeded-spec)
-It isn't that JSON-LD, and its efforts to standardize a JSON vocabulary, lacks valuable motivation or isn't trying to solve a real problem, it's that it is a redundant effort that is making a lot of the same mistakes of standards past, on top of a number of questionable licensing issues.  In the context of the web, its a complete DRY violation which brings along all of the data rot and maintenance problems that RSS and ATOM suffer from.  
+It isn't that JSON-LD, and its efforts to standardize a JSON vocabulary, lacks valuable motivation or isn't trying to solve a real problem.  The problem is that it's a *redundant* effort to [existing standards](http://microformats.org) and it is making a lot of the *same mistakes* of standards past.
 
-I was bummed to hear that [Payswarm](https://payswarm.com) is behind it, as they are trying to tackle an important issue.
+I was bummed to hear that [Payswarm](https://payswarm.com) is partially behind it, as they are trying to tackle an important issue.  Did the microformat vocabulary not meet their needs for backend database vocabulary? 
