--- a/_posts/notes/2013-08-08-t2.md
+++ b/_posts/notes/2013-08-08-t2.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t2
 date: "2013-08-08 09:06"
 reply_url: "http://werd.io/view/5203aeafbed7dec3297fe349"
