--- a/_posts/2013-05-09-push-test.md
+++ b/_posts/2013-05-09-push-test.md
@@ -4,7 +4,7 @@ title: "PuSH Test"
 date: 2013-05-09 01:21
 comments: false
 sidebar: collapse
-external-url:
+external_url:
 tags: [Website]
 published: true
 ---
