--- a/_posts/notes/2013-08-08-t3.md
+++ b/_posts/notes/2013-08-08-t3.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t3
 date: "2013-08-08 11:26"
 reply_url: "http://aaronparecki.com/notes/2013/08/08/2/osfw3c"
