Fixed some spelling errors

--- a/_posts/notes/2013-08-08-t5.md
+++ b/_posts/notes/2013-08-08-t5.md
@@ -9,6 +9,6 @@ reply_url: "http://www.sandeep.io/123"
 reply_title: sandeep.io
 ---
 
-After this weekend at [osfw3c](http://www.w3.org/2013/socialweb/agenda.html), folks from the indieweb and [Evan](https://e14n.com) from [pump.io](http://pump.io) have reached a consusus to collaborate!  Also, [App.net implemented](http://blog.app.net/2013/08/07/response-to-brennan-novak-part-ii/) [uF2](http://microformats.org/wiki/microformats2)!  Sending and reciving indiweb comments to both soon I hope?  Things are looking up for #3.
+After this weekend at [osfw3c](http://www.w3.org/2013/socialweb/agenda.html), folks from the indieweb and [Evan](https://e14n.com) from [pump.io](http://pump.io) have reached a censuses to collaborate!  Also, [App.net implemented](http://blog.app.net/2013/08/07/response-to-brennan-novak-part-ii/) [uF2](http://microformats.org/wiki/microformats2)!  Sending and receiving indiweb comments to both soon I hope?  Things are looking up for #3.
 
 On a side note, we're missing your presence in IRC :(
