--- a/_posts/notes/2013-08-12-t1.md
+++ b/_posts/notes/2013-08-12-t1.md
@@ -9,4 +9,4 @@ tags:
   - Microdata
 ---
 
-It took less time to implement [Microformats 2](http://microformats.org/wiki/microformats2) on my blog than it did to remove the Microdata [schema.org](http://schema.org/docs/full.html) tags from my posting templates.
+It took less time to implement [Microformats 2](http://microformats.org/wiki/microformats2) than it did to remove the Microdata [schema.org](http://schema.org/docs/full.html) tags from my posting templates.  
