--- a/_posts/notes/2013-09-02-t1.md
+++ b/_posts/notes/2013-09-02-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 date: "2013-09-02 10:43"
 reply_url: "http://werd.io/view/5221a08abed7de8e1af33bb4"
