--- a/_posts/notes/2013-09-29-t1.md
+++ b/_posts/notes/2013-09-29-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 date: "2013-09-29 20:55"
 reply_url: "http://aaronparecki.com/events/2013/09/30/1/indieweb-dinner-at-21st-amendment"
