--- a/_posts/notes/2013-10-20-t1.md
+++ b/_posts/notes/2013-10-20-t1.md
@@ -8,4 +8,8 @@ title: t1
 
 - [Hackpad with notes and schedule](https://hackpad.com/WebRTC-Camp-2013-ViBwUIBkDGh)
 - [#webrtcamp on freenode](irc://chat.us.freenode.net/webrtcamp)
-- 
+- Why [SDP](http://en.wikipedia.org/wiki/Session_Description_Protocol)?  
+	- WebRTC has deepish roots with Jingle (it sounds?)
+	- SDP originate with [MBone](http://en.wikipedia.org/wiki/Mbone)
+- The WebRTC stack only uses the VP8 video codec right now, however it sounds like there is a lack of hardware support for VP8, however Google is working on getting those in production.  It is unknown what Apple will do, and Microsoft has their own competing proticol.  
+- Screen sharing has all sorts of security issues, namely, once you can see someone elses screen, you can pull sensative information off of their screen, such as auth tokens etc.
