--- a/_posts/notes/2013-10-20-t1.md
+++ b/_posts/notes/2013-10-20-t1.md
@@ -13,3 +13,5 @@ title: t1
 	- SDP originate with [MBone](http://en.wikipedia.org/wiki/Mbone)
 - The WebRTC stack only uses the VP8 video codec right now, however it sounds like there is a lack of hardware support for VP8, however Google is working on getting those in production.  It is unknown what Apple will do, and Microsoft has their own competing proticol.  
 - Screen sharing has all sorts of security issues, namely, once you can see someone elses screen, you can pull sensative information off of their screen, such as auth tokens etc.
+- It is possible to implement whatever you want over data channel, including your own voice and video tools.  This is a huge project, "orders of magnitude" larger than a standard web application.
+- 
