--- a/_posts/notes/2013-10-20-t1.md
+++ b/_posts/notes/2013-10-20-t1.md
@@ -18,3 +18,4 @@ tags:
 - Screen sharing has all sorts of security issues, namely, once you can see someone else's screen, you can pull sensitive information off of their screen, such as auth tokens etc.
 - It is possible to implement whatever you want over data channel, including your own voice and video tools.  This is a huge project, "orders of magnitude" larger than a standard web application.
 - It isn't implemented yet, but you 'will' be able to create media streams from a canvas source, and use that as a video source.
+- [Socket.io]() in danger of dying?  Abstract! abstract!  Here comes [primus](https://github.com/primus/primus) which wraps all of the popular realtime libraries.  I'll probably hold out for the abstraction on top of priums ;)   
