--- a/_posts/notes/2013-10-21-t1.md
+++ b/_posts/notes/2013-10-21-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 reply_url: "https://twitter.com/HenrikJoreteg/status/391994208992505857"
 reply_title: "@HenrikJoreteg"
