--- a/_posts/notes/2013-10-21-t1.md
+++ b/_posts/notes/2013-10-21-t1.md
@@ -7,7 +7,7 @@ reply_title: "@HenrikJoreteg"
 date: "2013-10-21 11:17"
 tags: 
   - webRTC
-  - "webRTC Camp"
+  - webRTC Camp
 ---
 
-Thanks more making awsome tools that enable this kind of thing!
+Thanks more making awesome tools that enable this kind of thing!
