--- a/_posts/notes/2013-10-21-t1.md
+++ b/_posts/notes/2013-10-21-t1.md
@@ -10,4 +10,4 @@ tags:
   - webRTC Camp
 ---
 
-Thanks more making awesome tools that enable this kind of thing!
+Thanks for making awesome tools that enable this kind of thing!
