--- a/_posts/notes/2013-10-29-t1.md
+++ b/_posts/notes/2013-10-29-t1.md
@@ -3,7 +3,7 @@ layout: note
 title: "t1"
 date: 2013-07-29 13:51
 tags: [GMOs, Oregon, Ashland]
-published: false
+published: true
 items:
 - type: 'youtube'
   v: 'f0CIxRrsf3A'
