Added twitter syndication link and indienews switch

--- a/_posts/notes/2013-10-29-t2.md
+++ b/_posts/notes/2013-10-29-t2.md
@@ -7,6 +7,7 @@ published: true
 items:
 - type: 'youtube'
   v: '9Ae4BxKC7cQ'
+syndicate: [{url: 'https://twitter.com/bretolius/status/395323162797158400', name: 'Twitter'}]
 ---
 {% assign i = 0  %}
 {% include item %}
