--- a/_posts/notes/2013-10-31-t1.md
+++ b/_posts/notes/2013-10-31-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 date: "2013-10-31 13:45"
 reply_url: "https://twitter.com/Baxley/status/396007003341856769"
