--- a/_posts/notes/2013-11-03-t1.md
+++ b/_posts/notes/2013-11-03-t1.md
@@ -6,7 +6,8 @@ date: "2013-11-03 20:10"
 ---
 
 [@evanpro](https://twitter.com/evanpro) Here are the results of my first dive into pump.io this weekend for [IWC:H](http://indiewebcamp.com/2013/hollywood): 
+
 - [Documentation Ideas](https://github.com/e14n/pump.io/pull/870)
 - [First pass at adding Microformats 2](https://github.com/e14n/pump.io/pull/871)
 
-Next step is getting pump.io fully configured on my server.
+Next step is getting pump.io fully configured on my server.  Really digging pump so far though!
