--- a/_posts/notes/2013-11-03-t1.md
+++ b/_posts/notes/2013-11-03-t1.md
@@ -10,4 +10,4 @@ date: "2013-11-03 20:10"
 - [Documentation Ideas](https://github.com/e14n/pump.io/pull/870)
 - [First pass at adding Microformats 2](https://github.com/e14n/pump.io/pull/871)
 
-Next step is getting pump.io fully configured on my server.  Really digging pump so far though!
+Next step is getting pump.io fully configured on my server.  Really digging pump so far!
