--- a/_posts/notes/2013-11-10-t1.md
+++ b/_posts/notes/2013-11-10-t1.md
@@ -1,17 +1,18 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 date: "2012-11-10 18:48"
 tags: 
   - Video
   - Herzog
-items:
-  - type: 'youtube'
-    v: 't72P9kZrT_c'
-  - type: 'youtube'
-    v: 'yk-2ulMuD6M'
+items: 
+  - type: youtube
+    v: t72P9kZrT_c
+  - type: youtube
+    v: "yk-2ulMuD6M"
 ---
+
 {% assign i = 0  %}
 {% include item %}
 
