--- a/_posts/notes/2013-11-13-t1.md
+++ b/_posts/notes/2013-11-13-t1.md
@@ -7,7 +7,7 @@ tags:
   - Maps
 ---
 
-I made a map at [MaptimePDX Hack Night](http://calagator.org/events/1250465193)!
+I made a map at [@MaptimePDX Hack Night](http://calagator.org/events/1250465193)!
 
 <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 
