--- a/_posts/notes/2013-12-02-t1.md
+++ b/_posts/notes/2013-12-02-t1.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: t1
 reply_url: "http://werd.io/2013/the-age-old-question-rears-its-ugly-head-once-more"
 reply_title: werd.io
