Some minor wording changes and tag changes.

--- a/_posts/notes/2013-10-19-t1.md
+++ b/_posts/notes/2013-10-19-t1.md
@@ -5,6 +5,7 @@ title: t1
 date: "2013-10-19 20:15"
 tags: 
   - slides
+  - SEMterface
 ---
 
 My slide deck for [WebRTC Camp](http://2013.webrtccamp.com/) tomorrow:
