--- a/_posts/notes/2014-01-26-t1.md
+++ b/_posts/notes/2014-01-26-t1.md
@@ -7,7 +7,7 @@ tags:
   - Video
 ---
 
-<iframe width="420" height="315" src="//www.youtube-nocookie.com/embed/c6SUOeAqOjU" frameborder="0" allowfullscreen></iframe>
+<div class='youtube flex-video'><iframe width="420" height="315" src="//www.youtube-nocookie.com/embed/c6SUOeAqOjU" frameborder="0" allowfullscreen></iframe></div>
 
 Ted Nelson: "Computers for Cynics 2 - It All Went Wrong at Xerox PARC"
 We've all been duped!
