--- a/_posts/notes/2013-10-19-t1.md
+++ b/_posts/notes/2013-10-19-t1.md
@@ -13,3 +13,4 @@ My slide deck for [WebRTC Camp](http://2013.webrtccamp.com/) tomorrow:
 <iframe src="http://slid.es/bretcomnes/scanning-electron-microscope-web-rtc/embed" width="576" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 * [http://slid.es/bretcomnes/scanning-electron-microscope-web-rtc](http://slid.es/bretcomnes/scanning-electron-microscope-web-rtc)
+* [Photos](https://drive.google.com/folderview?id=0BwTZIu3XaN90SjM1TGJDNWphQnc&usp=sharing)
