--- a/_posts/notes/2014-03-29-narduar.md
+++ b/_posts/notes/2014-03-29-narduar.md
@@ -7,5 +7,5 @@ tags:
   - Video
 ---
 
-<iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/HkSUazeI2nM" frameborder="0" allowfullscreen></iframe>
-TEDxVancouver - Nardwuar - Do It Yourself! 
+<div class="flex-video vimeo"><iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/HkSUazeI2nM" frameborder="0" allowfullscreen></iframe></div>
+TEDxVancouver - Nardwuar - Do It Yourself!
