--- a/_posts/notes/2014-04-22-cfp.md
+++ b/_posts/notes/2014-04-22-cfp.md
@@ -1,10 +1,21 @@
 ---
 layout: note
-published: false
+published: true
 title: cfp
 date: "2014-04-22 20:05"
 tags: 
   - cfp
+items:
+- type: 'flickr'
+  p: '13978249284'
+  user: 'bretc'
+  title: 'A photo by someone'
+  src: 'https://farm3.staticflickr.com/2936/13978249284_0ba5d6399c_b.jpg'
+  w: '1024'
+  h: '224'
 ---
+{% assign i = 0  %}
 
 Enjoying meeting everyone at the first @CodeforPortland hack night!
+
+{% include item %}
