Added syndication info

--- a/_posts/notes/2014-04-22-cfp.md
+++ b/_posts/notes/2014-04-22-cfp.md
@@ -13,6 +13,10 @@ items:
   src: 'https://farm3.staticflickr.com/2936/13978249284_0ba5d6399c_b.jpg'
   w: '1024'
   h: '224'
+syndicate: 
+  - 
+    name: Twitter
+    url: "https://twitter.com/bretolius/status/458810965077655552"
 ---
 {% assign i = 0  %}
 
