--- a/_posts/notes/2014-04-23-hwc.md
+++ b/_posts/notes/2014-04-23-hwc.md
@@ -8,6 +8,7 @@ tags:
 date: "2014-04-23 15:34"
 reply_url: "http://aaronparecki.com/events/2014/04/23/1/homebrew-website-club"
 reply_title: aaronparecki.com
+rsvp: "yes"
 ---
 
 I'm going to [Homebrew Website Club!](http://indiewebcamp.com/events/2014-04-23-homebrew-website-club)!
