Removed extra exclamation point

--- a/_posts/notes/2014-04-23-hwc.md
+++ b/_posts/notes/2014-04-23-hwc.md
@@ -11,4 +11,4 @@ reply_title: aaronparecki.com
 rsvp: "yes"
 ---
 
-I'm going to [Homebrew Website Club!](http://indiewebcamp.com/events/2014-04-23-homebrew-website-club)!
+I'm going to [Homebrew Website Club](http://indiewebcamp.com/events/2014-04-23-homebrew-website-club)!
