Added syndication link

--- a/_posts/notes/2014-04-25-11th-and-couch.md
+++ b/_posts/notes/2014-04-25-11th-and-couch.md
@@ -20,6 +20,10 @@ items:
   src: 'https://farm8.staticflickr.com/7262/14009397745_4af9a2b165_b.jpg'
   h: '768'
   w: '1024'
+syndicate: 
+  - 
+    name: Twitter
+    url: "https://twitter.com/bretolius/status/459809327315165184"
 ---
 
 {% assign i = 0  %}
