--- a/_posts/notes/2014-04-25-11th-and-couch.md
+++ b/_posts/notes/2014-04-25-11th-and-couch.md
@@ -24,6 +24,7 @@ syndicate:
   - 
     name: Twitter
     url: "https://twitter.com/bretolius/status/459809327315165184"
+redirect_from: "t1"
 ---
 
 {% assign i = 0  %}
