--- a/_posts/notes/2014-03-16-t2.md
+++ b/_posts/notes/2014-03-16-t2.md
@@ -7,6 +7,7 @@ syndicate:
   - 
     name: Twitter
     url: "https://twitter.com/bretolius/status/445344944564076544"
+redirect_from: "t1"
 ---
 
 "Fork me on @github" sounds like "Fuck me on @github" #onpurpose 
