Added camlistore draf

--- a/_posts/notes/2014-04-27-campdx.md
+++ b/_posts/notes/2014-04-27-campdx.md
@@ -5,7 +5,19 @@ title: campdx
 date: "2014-04-27 16:30"
 tags: 
   - Camlistore
+  - Photos
+items:
+- type: 'flickr'
+  p: '14018464396'
+  user: 'bretc'
+  title: 'CamPDX meetup at the waypost'
+  src: 'https://farm3.staticflickr.com/2938/14018464396_5b53531e67_b.jpg'
+  w: '1024'
+  h: '311'
 ---
+
+{% assign i = 0  %}
 
 Had a great time working with [@edrex](https://twitter.com/edrex) [@mathpunk](https://twitter.com/mathpunk) and [@WardCunningham]() on [@camlistore](https://twitter.com/Camlistore) servers at [@thewaypost](https://twitter.com/thewaypost) today.  Writeups coming soon. 
 
+{% include item %}
