--- a/_posts/notes/2014-04-27-campdx.md
+++ b/_posts/notes/2014-04-27-campdx.md
@@ -18,6 +18,6 @@ items:
 
 {% assign i = 0  %}
 
-Had a great time working with [@edrex](https://twitter.com/edrex) [@mathpunk](https://twitter.com/mathpunk) and [@WardCunningham]() on [@camlistore](https://twitter.com/Camlistore) servers at [@thewaypost](https://twitter.com/thewaypost) today.  Writeups coming soon. 
+Had a great time working with [@edrex](https://twitter.com/edrex) [@mathpunk](https://twitter.com/mathpunk) and [@WardCunningham](https://twitter.com/WardCunningham) on [@camlistore](https://twitter.com/Camlistore) servers at [@thewaypost](https://twitter.com/thewaypost) today.  Writeups coming soon. 
 
 {% include item %}
