Addded syndication link

--- a/_posts/notes/2014-04-27-campdx.md
+++ b/_posts/notes/2014-04-27-campdx.md
@@ -6,6 +6,7 @@ date: "2014-04-27 16:30"
 tags: 
   - Camlistore
   - Photos
+
 items:
 - type: 'flickr'
   p: '14018464396'
@@ -14,6 +15,11 @@ items:
   src: 'https://farm3.staticflickr.com/2938/14018464396_5b53531e67_b.jpg'
   w: '1024'
   h: '311'
+
+syndicate: 
+  - 
+    name: Twitter
+    url: 'https://twitter.com/bretolius/status/460564904181641217'
 ---
 
 {% assign i = 0  %}
