Added twitter syndication to 2014-05-05-fiber.md

--- a/_posts/notes/2014-05-05-fiber.md
+++ b/_posts/notes/2014-05-05-fiber.md
@@ -5,6 +5,10 @@ title: fiber
 date: "2014-05-05 14:04"
 tags: 
   - cfp
+syndicate: 
+  - 
+    name: Twitter
+    url: 'https://twitter.com/bretolius/status/463432577156538369'
 ---
 
 <div class="flex-video"><script src="https://embed.github.com/view/geojson/tedder/portland_fiber_huts/master/fiber_huts_highlighted.geojson"></script><p>Ted Timmons and Mele Sax-Barnett at <a href="https://github.com/tedder/portland_fiber_huts">https://github.com/tedder/portland_fiber_huts</a></p></div>
