--- a/_posts/notes/2014-05-05-fiber.md
+++ b/_posts/notes/2014-05-05-fiber.md
@@ -16,3 +16,4 @@ syndicate:
 Thanks to some work passed around the [Code for Portland mailing list](https://groups.google.com/forum/#!topic/code-for-portland/b-Csn_vJpgU), we now have a map of possible Google Fiber locations.  It will be a good day when [Comcast](https://www.youtube.com/watch?v=HAo5GgaJmsA) gets fired. 
 
 * [Data Repo](https://github.com/tedder/portland_fiber_huts)
+* [O! Article About the Map](http://www.oregonlive.com/silicon-forest/index.ssf/2014/05/google_fiber_where_might_it_pu.html)
