--- a/_posts/notes/2014-05-25-test.md
+++ b/_posts/notes/2014-05-25-test.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-published: false
+published: true
 title: test
 reply_url: "http://lionzan.me/2014-05-25/testing-webmentions/"
 date: "2014-05-25 11:05"
