--- a/_posts/notes/2014-05-25-test.md
+++ b/_posts/notes/2014-05-25-test.md
@@ -4,6 +4,7 @@ published: true
 title: test
 reply_url: "http://lionzan.me/2014-05-25/testing-webmentions/"
 date: "2014-05-25 11:05"
+reply_title: lionzan.me
 ---
 
 A test mention for [lionzan.me](http://lionzan.me)
