--- a/_posts/notes/2014-05-25-test.md
+++ b/_posts/notes/2014-05-25-test.md
@@ -7,4 +7,4 @@ date: "2014-05-25 11:05"
 reply_title: lionzan.me
 ---
 
-Congratulations [lionzan.me](http://lionzan.me) for getting webmention support on Jekyll!
+Congratulations [lionzan.me](http://lionzan.me) for getting webmention support in Jekyll!
