--- a/_posts/notes/2014-06-03-ndoch.md
+++ b/_posts/notes/2014-06-03-ndoch.md
@@ -8,5 +8,5 @@ tags:
   - ndoch
 ---
 
-A few pictures from [Code for Portland](http://www.codeforportland.org)'s sucessfull [National Day of Civic Hacking](http://calagator.org/events/1250466358).
+A few pictures from [Code for Portland](http://www.codeforportland.org)'s sucessfull [National Day of Civic Hacking](http://calagator.org/events/1250466358).  Check out the excellent writeup by Mele and Erica: http://www.codeforportland.org/news/2014/06/ndoch-wrap-up/
 
