Twitter syndication and avatar fix

--- a/_posts/notes/2014-06-03-ndoch.md
+++ b/_posts/notes/2014-06-03-ndoch.md
@@ -28,6 +28,7 @@ items:
   src: 'https://farm6.staticflickr.com/5153/14138951289_7ba7fdfe39_b.jpg'
   w: '1024'
   h: '221'
+syndicate: [{url: 'https://twitter.com/bretolius/status/474005105650331648', name: 'Twitter'}]
 ---
 {% assign i = 0  %}
 A few pictures from [Code for Portland](http://www.codeforportland.org)'s sucessfull [National Day of Civic Hacking](http://calagator.org/events/1250466358).  Check out the excellent writeup by [Mele](http://pdxmele.com/) and [Erica](http://lauervose.com/): [codeforportland.org/news/2014/06/ndoch-wrap-up](http://www.codeforportland.org/news/2014/06/ndoch-wrap-up/)
