Added in link to intel

--- a/_posts/notes/2014-06-03-ndoch.md
+++ b/_posts/notes/2014-06-03-ndoch.md
@@ -31,7 +31,11 @@ items:
 syndicate: [{url: 'https://twitter.com/bretolius/status/474005105650331648', name: 'Twitter'}]
 ---
 {% assign i = 0  %}
-A few pictures from [Code for Portland](http://www.codeforportland.org)'s sucessfull [National Day of Civic Hacking](http://calagator.org/events/1250466358).  Check out the excellent writeup by [Mele](http://pdxmele.com/) and [Erica](http://lauervose.com/): [codeforportland.org/news/2014/06/ndoch-wrap-up](http://www.codeforportland.org/news/2014/06/ndoch-wrap-up/)
+A few pictures from [Code for Portland](http://www.codeforportland.org)'s sucessfull [National Day of Civic Hacking](http://calagator.org/events/1250466358).  Check out the excellent writeup by [Mele](http://pdxmele.com/) and [Erica](http://lauervose.com/): 
+
+[codeforportland.org/news/2014/06/ndoch-wrap-up](http://www.codeforportland.org/news/2014/06/ndoch-wrap-up/)
+
+Also check out Intel's page on all the different projects: [hackforchange.org/projects](http://hackforchange.org/projects/)
 
 {% include item %}
 
