--- a/_posts/notes/2014-06-05-ne.md
+++ b/_posts/notes/2014-06-05-ne.md
@@ -1,56 +1,59 @@
 ---
 layout: note
-published: false
+published: true
 title: NE
 date: "2014-06-05 10:00"
 tags: 
   - Photos
   - pdx
-items:
-- type: 'flickr'
-  p: '14322277771'
-  user: 'bretc'
-  title: 'Industrial Alley'
-  src: 'https://farm6.staticflickr.com/5543/14322277771_20243a050b_h.jpg'
-  w: '1600'
-  h: '456'
-- type: 'flickr'
-  p: '14138949909'
-  user: 'bretc'
-  title: 'Broken Panoramic'
-  src: 'https://farm6.staticflickr.com/5494/14138949909_cc47b90459_h.jpg'
-  w: '1600'
-  h: '524'  
-- type: 'flickr'
-  p: '14138946859'
-  user: 'bretc'
-  title: 'Silos'
-  src: 'https://farm3.staticflickr.com/2924/14138946859_5aa5dcb920_h.jpg'
-  w: '1600'
-  h: '1200'
-- type: 'flickr'
-  p: '14138997240 '
-  user: 'bretc'
-  title: 'Lion Sticker'
-  src: 'https://farm3.staticflickr.com/2914/14138997240_0cbea72aea_h.jpg'
-  w: '1200'
-  h: '1600 '
-- type: 'flickr'
-  p: '14138986690'
-  user: 'bretc'
-  title: 'What is under a fire hydrant'
-  src: 'https://farm6.staticflickr.com/5113/14138986690_67340a113c_b.jpg'
-  w: '1600'
-  h: '1200'
-- type: 'flickr'
-  p: '14323832672 '
-  user: 'bretc'
-  title: 'Portland Public Schools'
-  src: 'https://farm3.staticflickr.com/2918/14323832672_40c27d6012_b.jpg'
-  w: '768'
-  h: '1024'
-syndicate: [{url: '', name: 'Twitter'}]
+items: 
+  - type: flickr
+    p: "14322277771"
+    user: bretc
+    title: Industrial Alley
+    src: "https://farm6.staticflickr.com/5543/14322277771_20243a050b_h.jpg"
+    w: "1600"
+    h: "456"
+  - type: flickr
+    p: "14138949909"
+    user: bretc
+    title: Broken Panoramic
+    src: "https://farm6.staticflickr.com/5494/14138949909_cc47b90459_h.jpg"
+    w: "1600"
+    h: "524"
+  - type: flickr
+    p: "14138946859"
+    user: bretc
+    title: Silos
+    src: "https://farm3.staticflickr.com/2924/14138946859_5aa5dcb920_h.jpg"
+    w: "1600"
+    h: "1200"
+  - type: flickr
+    p: "14138997240 "
+    user: bretc
+    title: Lion Sticker
+    src: "https://farm3.staticflickr.com/2914/14138997240_0cbea72aea_h.jpg"
+    w: "1200"
+    h: "1600 "
+  - type: flickr
+    p: "14138986690"
+    user: bretc
+    title: What is under a fire hydrant
+    src: "https://farm6.staticflickr.com/5113/14138986690_67340a113c_b.jpg"
+    w: "1600"
+    h: "1200"
+  - type: flickr
+    p: "14323832672 "
+    user: bretc
+    title: Portland Public Schools
+    src: "https://farm3.staticflickr.com/2918/14323832672_40c27d6012_b.jpg"
+    w: "768"
+    h: "1024"
+syndicate: 
+  - url: ""
+    name: Twitter
 ---
+
 {% assign i = 0  %}
 
 A minor adventure into NE portland.
