Added firehydrant image

--- a/_posts/notes/2014-06-05-ne.md
+++ b/_posts/notes/2014-06-05-ne.md
@@ -63,6 +63,8 @@ A minor adventure into NE portland.
 
 {% include item %}
 
+So this is what is under a fire hydrant.
+
 {% include item %}
 
 {% include item %}
