Added syndication link

--- a/_posts/notes/2014-06-05-ne.md
+++ b/_posts/notes/2014-06-05-ne.md
@@ -50,7 +50,7 @@ items:
     w: "768"
     h: "1024"
 syndicate: 
-  - url: ""
+  - url: "https://twitter.com/bretolius/status/474601522194436096"
     name: Twitter
 ---
 
