Added syndication link

--- a/_posts/notes/2014-06-28-osb14-iwc.md
+++ b/_posts/notes/2014-06-28-osb14-iwc.md
@@ -6,6 +6,10 @@ date: "2014-06-27 21:32"
 tags: 
   - IndieWebCamp
   - OSB
+syndicate: 
+  - 
+    name: Twitter
+    url: https://twitter.com/bretolius/status/482740951501111296
 ---
 
 Still in town from [#OSB14](http://opensourcebridge.org/y2013/)? Interested in building the future of the independent Web? Come to [@indiewebcamp](http://indiewebcamp.com)!
