Added twitter url

--- a/_posts/notes/2014-08-28-git-annex.md
+++ b/_posts/notes/2014-08-28-git-annex.md
@@ -6,7 +6,7 @@ date: "2014-08-28 14:53"
 syndicate:
   -
     name: Twitter
-    url:
+    url: https://twitter.com/bretolius/status/505112916278800385
 ---
 
 Met [Joey Hess](http://joeyh.name/) this week at [debconf14](http://debconf14.debconf.org) and revisited [git-annex again](http://git-annex.branchable.com).  <3 these special remote options.  There is nothing else like them.
