Added correct reply title

--- a/_posts/rsvp/2014-09-08-iwb.md
+++ b/_posts/rsvp/2014-09-08-iwb.md
@@ -6,7 +6,7 @@ date: "2014-09-08 12:41"
 tags:
   - RSVP
 reply_url: "http://known.kevinmarks.com/2014/indieweb-xoxo-breakfast"
-reply_title: aaronparecki.com
+reply_title: known.kevinmarks.com
 rsvp: "maybe"
 ---
 
