Enabled entry posts

--- a/_posts/ownyourgram/2014-07-20-scream.md
+++ b/_posts/ownyourgram/2014-07-20-scream.md
@@ -12,15 +12,14 @@ items:
   filename: ig40Grg3.jpg
   encoding: 7bit
   location: geo:45.523003077,-122.642880373
-  category: 
+  category:
   published: 2014-07-19T19:47:54-07:00
   place_name: Pix Pâtisserie
   content: Scream
   syndication: http://instagram.com/p/qqBoNLxfqV/
 
-syndicate: 
-  - 
-    name: Instagram
+syndicate:
+  - name: Instagram
     url: http://instagram.com/p/qqBoNLxfqV/
 ---
 {% assign i = 0  %}
