Added syndication links.  annoying.  need to automate

--- a/_posts/ownyourgram.com/2014-09-25-hwc.md
+++ b/_posts/ownyourgram.com/2014-09-25-hwc.md
@@ -18,6 +18,10 @@ files:
     workPath: /media/ownyourgram.com
     src: /media/ownyourgram.com/igkQYoHN.jpg
 published: true
-syndicate: null
+syndicate:
+  - name: Instagram
+    url: "http://instagram.com/p/tWgPpSxfl6/"
+  - name: Twitter
+    url: "https://twitter.com/dietrich/status/514965231550734336"
 ---
 Hwc!
