--- a/_posts/notes/2014-11-12-rosetta.md
+++ b/_posts/notes/2014-11-12-rosetta.md
@@ -11,4 +11,4 @@ date: "2014-10-17 10:09"
 
 "She is sexy, but I never said she was easy."  Yeeeeah buddy!
 
-STEM outreach aside, way cool they landed on a freakin comet.
+STEM outreach aside, way cool they [landed](http://rosetta.esa.int) on a freakin comet.
