--- a/_posts/notes/2014-11-12-rosetta.md
+++ b/_posts/notes/2014-11-12-rosetta.md
@@ -5,9 +5,9 @@ title: Rosetta Lander
 date: 2014-11-12 21:02
 ---
 
-![rosetta1](https://farm9.staticflickr.com/8267/15775944001_fdc5c9fb62_o.png)
+[![rosetta1](https://farm9.staticflickr.com/8267/15775944001_fdc5c9fb62_o.png)](https://farm9.staticflickr.com/8267/15775944001_fdc5c9fb62_o.png)
 
-![rosetta2](https://farm8.staticflickr.com/7549/15593009760_aef8cf460f_o.png)
+[![rosetta2](https://farm8.staticflickr.com/7549/15593009760_aef8cf460f_o.png)](https://farm8.staticflickr.com/7549/15593009760_aef8cf460f_o.png)
 
 "She is sexy, but I never said she was easy."  Yeeeeah buddy!
 
