--- a/_posts/notes/2014-11-12-rosetta.md
+++ b/_posts/notes/2014-11-12-rosetta.md
@@ -3,6 +3,10 @@ layout: note
 published: true
 title: Rosetta Lander
 date: 2014-11-12 21:02
+tags:
+  - physics
+  - science
+  - fashion
 ---
 
 [![rosetta1](https://farm9.staticflickr.com/8267/15775944001_fdc5c9fb62_o.png)](https://farm9.staticflickr.com/8267/15775944001_fdc5c9fb62_o.png)
