Added link to tempy

--- a/_posts/notes/2014-12-08-tempy.md
+++ b/_posts/notes/2014-12-08-tempy.md
@@ -8,7 +8,7 @@ syndicate:
     name: Twitter
 ---
 
-Tempy is up and running smoothy so far:
+[Tempy](http://tempy.herokuapp.com) is up and running smoothy so far:
 
 [![tempy](https://cdn.rawgit.com/bcomnes/tempy/master/screenshot.png)](https://cdn.rawgit.com/bcomnes/tempy/master/screenshot.png)
 
