--- a/_posts/notes/2014-12-08-tempy.md
+++ b/_posts/notes/2014-12-08-tempy.md
@@ -4,7 +4,7 @@ published: true
 title: Tempy
 date: "2014-12-08 16:02"
 syndicate:
-  - url:
+  - url: https://twitter.com/bretolius/status/542109421430505472
     name: Twitter
 ---
 
