--- a/_posts/notes/2014-12-11-bell-lab.md
+++ b/_posts/notes/2014-12-11-bell-lab.md
@@ -1,7 +1,7 @@
 ---
 layout: note
 published: true
-title: UNIX: Making Computers Easier To Use -- AT&T Archives film from 1982, Bell Laboratories
+title: "UNIX: Making Computers Easier To Use -- AT&T Archives film from 1982, Bell Laboratories"
 date: 2014-12-11 09:03
 ---
 
