--- a/_posts/notes/2014-12-15-osc.md
+++ b/_posts/notes/2014-12-15-osc.md
@@ -1,7 +1,7 @@
 ---
 layout: note
 published: true
-title: JS Style
+title: OSC
 date: 2014-12-15 10:50
 ---
 [How To Draw Mushrooms On An Oscilloscope With Sound](http://www.youtube.com/watch?v=rtR63-ecUNo)
