--- a/_posts/notes/2015-03-17-kilauea.md
+++ b/_posts/notes/2015-03-17-kilauea.md
@@ -12,4 +12,4 @@ tags:
 
 Kīlauea, Hawaii 2015
 
-Rest of the photo from the trip on flickr: [flickr.com/photos/bretc/sets/72157651403677102](https://www.flickr.com/photos/bretc/sets/72157651403677102/)
+Rest of the photos from the trip on flickr: [flickr.com/photos/bretc/sets/72157651403677102](https://www.flickr.com/photos/bretc/sets/72157651403677102/)
