Added twitter url

--- a/_posts/articles/2015-04-24-node-tmpr.md
+++ b/_posts/articles/2015-04-24-node-tmpr.md
@@ -4,7 +4,7 @@ published: true
 title: "New Module: tmpr"
 date: 2015-04-24 09:13
 syndicate:
-  - url:
+  - url: https://twitter.com/bretolius/status/591647065983160320
     name: twitter
 ---
 
