--- a/_posts/articles/2015-05-16-x100t-filters.md
+++ b/_posts/articles/2015-05-16-x100t-filters.md
@@ -25,10 +25,12 @@ It consists of:
 - <a href="http://www.amazon.com/gp/product/B00009R7B7/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B00009R7B7&linkCode=as2&tag=bretio-20&linkId=3M4F3RYEHA3EBJEW">Cokin 49mm Extension Ring</a><img src="http://ir-na.amazon-adsystem.com/e/ir?t=bretio-20&l=as2&o=1&a=B00009R7B7" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 - The default thread cover ring that comes on the camera.
 
+Other filters and spacers are likely to work.
+
 The Fujifilm [AR-X100](http://www.fujifilm.com/products/digital_cameras/accessories/lens/#lenshood) Adapter Ring can be avoided all together if you put the lens filter and spacer ring on __backwards__.  In addition to fitting in the case better, a bonus to this arrangement is that you get to keep using the little thread cover ring that comes on the camera.
 
 __Important__: You have to use a spacer.  The lens on the X100T extends out of the barrel quite a few *mm*, and you could damage the motor without enough space between the filter and the lens.
 
-The only drawback is that the lens cap that comes with the camera fit any longer.  Thats okay though because your top case is now the lens cap, and your primary lens is no longer vulnerable when the top cover is off.
+The only drawback is that the lens cap that comes with the camera wont fit any longer.  Thats okay though because your top case is now the lens cap, and your primary lens is no longer vulnerable when the top cover is off.
 
 <a href="https://www.flickr.com/photos/bretc/17740999405" title="X100t filter mounts by Bret Comnes, on Flickr"><img src="https://c4.staticflickr.com/8/7730/17740999405_1385a750e9_b.jpg" width="768" height="1024" alt="X100t filter mounts" class="img-polaroid"></a>
