--- a/_posts/articles/2015-05-16-x100t-filters.md
+++ b/_posts/articles/2015-05-16-x100t-filters.md
@@ -27,7 +27,7 @@ It consists of:
 
 Other filters and spacers are likely to work.
 
-The Fujifilm [AR-X100](http://www.fujifilm.com/products/digital_cameras/accessories/lens/#lenshood) Adapter Ring can be avoided all together if you put the lens filter and spacer ring on __backwards__.  In addition to fitting in the case better, a bonus to this arrangement is that you get to keep using the little thread cover ring that comes on the camera.
+The Fujifilm [AR-X100](http://www.fujifilm.com/products/digital_cameras/accessories/lens/#lenshood) Adapter Ring can be avoided all together if you put the lens filter and spacer ring on __backwards__.  In addition to fitting in the case better, you get to keep using the little thread cover ring that comes on the camera.
 
 __Important__: You have to use a spacer.  The lens on the X100T extends out of the barrel quite a few *mm*, and you could damage the motor without enough space between the filter and the lens.
 
