--- a/_posts/articles/2015-05-16-x100t-filters.md
+++ b/_posts/articles/2015-05-16-x100t-filters.md
@@ -4,7 +4,7 @@ published: true
 title: "Fujifilm X100T Filters That Fit"
 date: 2015-05-16 13:59
 syndicate:
-  - url: twitter
+  - url: https://twitter.com/bretolius/status/599697410869211136
     name: twitter
 ---
 Here is a lens filter setup that is compatible with the [Fujifilm LC-X100S](http://www.fujifilm.com/products/digital_cameras/accessories/camera_cases/#case) leather case used with a [X100T](http://www.fujifilm.com/products/digital_cameras/x/fujifilm_x100t/):
