--- a/_posts/notes/2013-11-13-t1.md
+++ b/_posts/notes/2013-11-13-t1.md
@@ -3,7 +3,7 @@ layout: note
 published: true
 title: t1
 date: "2013-11-13 19:34"
-tags: 
+tags:
   - Maps
 syndicate: [{url: 'https://twitter.com/bretolius/status/400840557242503169', name: 'Twitter'}]
 ---
@@ -11,16 +11,17 @@ syndicate: [{url: 'https://twitter.com/bretolius/status/400840557242503169', nam
 I made a map at [@MaptimePDX](https://twitter.com/maptimepdx) [Hack Night](http://calagator.org/events/1250465193)!
 
 <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
 
 <div id="map">
     <script>
     var map = L.map('map').setView([45.516469, -122.676208],14);
-    
+
     L.tileLayer(
         'http://{s}.tile.stamen.com/toner/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright"> OpenStreetMap</a> contributors'
     }).addTo(map);
-        
+
         var marker = L.marker([45.516469, -122.676208]).addTo(map);
         marker.bindPopup("EsriPDX");
     </script>
